# tree-sitter-matry

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  sample.matry  test.matry
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: comments.txt
corpus/component/: elements.txt  misc.txt  styles.txt  variants.txt
corpus/story/: frames.txt  misc.txt
corpus/token/: misc.txt  types.txt
corpus/tokens/: colors.txt  conditionals.txt  dimensions.txt  nesting.txt  types.txt  variants.txt
corpus/tokens/colors/: a98rgb.txt  functions.txt  hex.txt  hsl.txt  hsv.txt  oklab.txt  oklch.txt  p3.txt  rec2020.txt  rgb.txt
examples/: button
notes/: conditional-rendering.md  scratchpad.matry  test.matry
rust_src/: main.rs
samples/: sample
src/: _old1_scanner.c  _old2_scanner.c  _old3_scanner.c  _old4_scanner.c  draft-scanner.c  grammar.json  node-types.json  parser.c  stack.c  stack.h  test.c
test/corpus/: comments.txt
test/corpus/tokens/: conditionals.txt  config.txt  dimensions.txt  nesting.txt  types.txt
test/corpus/tokens/colors/: functions.txt  hex.txt  new-colors.txt  rgb.txt
